--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Wearary">
-        <activity android:name=".activity4"></activity>
+        <activity android:name=".Activity3_addmemo"></activity>
+        <activity android:name=".activity4" />
         <activity android:name=".activity3" />
         <activity android:name=".activity2" />
         <activity android:name=".activity1" />
