--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         <activity android:name=".activity4"></activity>
         <activity android:name=".activity3" />
         <activity android:name=".activity2" />
-        <activity android:name=".activity1" />
+        <activity android:name=".Activity1" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
