--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,10 @@
     <!--인터넷 권한 (activity1)-->
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <!--사진 저장소 권한(acitivity2)-->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:usesCleartextTraffic="true"
         android:allowBackup="true"
@@ -16,7 +20,9 @@
 
         <activity android:name=".activity4"></activity>
         <activity android:name=".activity3" />
-        <activity android:name=".activity2" />
+
+        <activity android:name=".Activity2"/>
+        <activity android:name=".Activity2_codi"/>
 
         <activity android:name=".Activity1"/>
         <meta-data
