--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,17 +2,27 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.professsionalandroid.apps.wearary">
 
+    <!--인터넷 권한 (activity1)-->
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <!--사진 저장소 권한(acitivity2)-->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
+        android:usesCleartextTraffic="true"
         android:allowBackup="true"
-        android:icon="@drawable/diary"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/diary"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Wearary">
-        <activity android:name=".Activity3_addmemo"></activity>
-        <activity android:name=".activity4" />
+
+        <activity android:name=".activity4"></activity>
         <activity android:name=".activity3" />
-        <activity android:name=".activity2" />
+
+        <activity android:name=".Activity2"/>
+        <activity android:name=".Activity2_codi"/>
 
         <activity android:name=".Activity1"/>
         <meta-data
